fixed sticky navbar covering up cards

--- a/public/css/mainStyle.css
+++ b/public/css/mainStyle.css
@@ -105,11 +105,12 @@ nav a:hover {
     position: fixed;
     top: 0;
     width: 100%;
+    
   }
   
   /* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
   .sticky + .content {
-    padding-top: 60px;
+    padding-top: 50px;
   }
 
 .btn-no-style {
